# news-subscriber/news-subscriber-bff/api/newssub/v1/article.pb.validate.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-validate. DO NOT EDIT.
-// source: newssub/v1/article.proto
+// source: api/newssub/v1/article.proto
 
 package v1
 
@@ -35,22 +35,22 @@ var (
 	_ = sort.Sort
 )
 
-// Validate checks the field values on ArticalItem with the rules defined in
+// Validate checks the field values on ArticleItem with the rules defined in
 // the proto definition for this message. If any rules are violated, the first
 // error encountered is returned, or nil if there are no violations.
-func (m *ArticalItem) Validate() error {
+func (m *ArticleItem) Validate() error {
 	return m.validate(false)
 }
 
-// ValidateAll checks the field values on ArticalItem with the rules defined in
+// ValidateAll checks the field values on ArticleItem with the rules defined in
 // the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in ArticalItemMultiError, or
+// result is a list of violation errors wrapped in ArticleItemMultiError, or
 // nil if none found.
-func (m *ArticalItem) ValidateAll() error {
+func (m *ArticleItem) ValidateAll() error {
 	return m.validate(true)
 }
 
-func (m *ArticalItem) validate(all bool) error {
+func (m *ArticleItem) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
@@ -64,18 +64,18 @@ func (m *ArticalItem) validate(all bool) error {
 	// no validation rules for Content
 
 	if len(errors) > 0 {
-		return ArticalItemMultiError(errors)
+		return ArticleItemMultiError(errors)
 	}
 
 	return nil
 }
 
-// ArticalItemMultiError is an error wrapping multiple validation errors
-// returned by ArticalItem.ValidateAll() if the designated constraints aren't met.
-type ArticalItemMultiError []error
+// ArticleItemMultiError is an error wrapping multiple validation errors
+// returned by ArticleItem.ValidateAll() if the designated constraints aren't met.
+type ArticleItemMultiError []error
 
 // Error returns a concatenation of all the error messages it wraps.
-func (m ArticalItemMultiError) Error() string {
+func (m ArticleItemMultiError) Error() string {
 	var msgs []string
 	for _, err := range m {
 		msgs = append(msgs, err.Error())
@@ -84,11 +84,11 @@ func (m ArticalItemMultiError) Error() string {
 }
 
 // AllErrors returns a list of validation violation errors.
-func (m ArticalItemMultiError) AllErrors() []error { return m }
+func (m ArticleItemMultiError) AllErrors() []error { return m }
 
-// ArticalItemValidationError is the validation error returned by
-// ArticalItem.Validate if the designated constraints aren't met.
-type ArticalItemValidationError struct {
+// ArticleItemValidationError is the validation error returned by
+// ArticleItem.Validate if the designated constraints aren't met.
+type ArticleItemValidationError struct {
 	field  string
 	reason string
 	cause  error
@@ -96,22 +96,22 @@ type ArticalItemValidationError struct {
 }
 
 // Field function returns field value.
-func (e ArticalItemValidationError) Field() string { return e.field }
+func (e ArticleItemValidationError) Field() string { return e.field }
 
 // Reason function returns reason value.
-func (e ArticalItemValidationError) Reason() string { return e.reason }
+func (e ArticleItemValidationError) Reason() string { return e.reason }
 
 // Cause function returns cause value.
-func (e ArticalItemValidationError) Cause() error { return e.cause }
+func (e ArticleItemValidationError) Cause() error { return e.cause }
 
 // Key function returns key value.
-func (e ArticalItemValidationError) Key() bool { return e.key }
+func (e ArticleItemValidationError) Key() bool { return e.key }
 
 // ErrorName returns error name.
-func (e ArticalItemValidationError) ErrorName() string { return "ArticalItemValidationError" }
+func (e ArticleItemValidationError) ErrorName() string { return "ArticleItemValidationError" }
 
 // Error satisfies the builtin error interface
-func (e ArticalItemValidationError) Error() string {
+func (e ArticleItemValidationError) Error() string {
 	cause := ""
 	if e.cause != nil {
 		cause = fmt.Sprintf(" | caused by: %v", e.cause)
@@ -123,14 +123,14 @@ func (e ArticalItemValidationError) Error() string {
 	}
 
 	return fmt.Sprintf(
-		"invalid %sArticalItem.%s: %s%s",
+		"invalid %sArticleItem.%s: %s%s",
 		key,
 		e.field,
 		e.reason,
 		cause)
 }
 
-var _ error = ArticalItemValidationError{}
+var _ error = ArticleItemValidationError{}
 
 var _ interface {
 	Field() string
@@ -138,7 +138,7 @@ var _ interface {
 	Key() bool
 	Cause() error
 	ErrorName() string
-} = ArticalItemValidationError{}
+} = ArticleItemValidationError{}
 
 // Validate checks the field values on CreateArticleRequest with the rules
 // defined in the proto definition for this message. If any rules are
